--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VCTT-AGI Chat</title>
+    <meta name="description" content="MIN – The Self-Improving IDE. Cursor is dead. This is the future." />
+    <title>MIN – The Self-Improving IDE</title>
   </head>
   <body>
     <div id="root"></div>
