fix(deploy): force cache clear for router fix - add cache-busting headers and unique chunk names

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="MIN – The Self-Improving IDE. Cursor is dead. This is the future." />
+    
+    <!-- Cache-busting headers to force fresh deployment -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    
     <title>MIN – The Self-Improving IDE</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx?v=20251122"></script>
   </body>
 </html>
